blog/yaml/blog-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: blog-deploy
  name: blog-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-deploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: blog-deploy
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/labproj03/blog:1.3
        name: blog
        ports:
        - containerPort: 8080
        resources: {}
status: {}
