blog/yaml/blog-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: blog-deploy
  name: blog-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: blog-deploy
status:
  loadBalancer: {}
