blog/yaml/blog-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: blog-deploy
  name: blog-route
spec:
  host: ""
  port:
    targetPort: 8080
  to:
    kind: ""
    name: blog-deploy
    weight: null
status:
  ingress: null
